[package]
name = "quoin-gpt"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoin-device = { path = "../quoin-device" }
quoin-codec = { path = "../quoin-codec" }
uuid = { version = "0.8", features = ["v4"] }
nbytes = "0.1"
crc = "1.8"

[dev-dependencies]
quoin-memory = { path = "../quoin-memory" }
tempfile = "3.2"
